About - cropped second picture. Navigation links - removed padding.

--- a/about.html
+++ b/about.html
@@ -28,20 +28,20 @@
       </button>
       <div class="dropdown collapse navbar-collapse d-lg-flex justify-content-between" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto mr-lg-0 p-lg-0 text-center d-lg-flex">
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="index.html">Home</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="index.html">Home</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="about.html">About me</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="about.html">About me</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="skills.html">My skills</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="skills.html">My skills</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="projects.html">My work</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="projects.html">My work</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="contact.html">Contact me</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="contact.html">Contact me</a>
           </li>
           <div class="someIcons d-flex align-items-center justify-content-center mt-3 mt-lg-0">
             <a href="https://www.behance.net/gdesignbg" class="m-2">
@@ -132,12 +132,12 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
         </div>
-        <img class="py-3" srcset="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533644670/genadi/aboutPage/workingPicture.jpg 500w,
-            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_992/v1533644670/genadi/aboutPage/workingPicture.jpg 992w,
-            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533644670/genadi/aboutPage/workingPicture.jpg 1500w"
+        <img class="py-3" srcset="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1534792471/genadi/aboutPage/homeworkplace.jpg 500w,
+        http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_992/v1534792471/genadi/aboutPage/homeworkplace.jpg 992w,
+        http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1534792471/genadi/aboutPage/homeworkplace.jpg 1500w"
           sizes="(max-width: 500px) 500px,
             (max-width: 992px) 992px,
-            1500px" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533644670/genadi/aboutPage/workingPicture.jpg 1500w">
+            1500px" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1534792471/genadi/aboutPage/homeworkplace.jpg">
         <div class="aboutpage__text mb-3 mt-3 ml-lg-5">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
