--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
       </button>
       <div class="dropdown collapse navbar-collapse d-lg-flex justify-content-between" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto mr-lg-0 p-lg-0 text-center d-lg-flex">
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="index.html">Home</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="index.html">Home</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="about.html">About me</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="about.html">About me</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="skills.html">My skills</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="skills.html">My skills</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="projects.html">My work</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="projects.html">My work</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-4">
-            <a class="nav-link" href="contact.html">Contact me</a>
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+            <a class="nav-link p-0" href="contact.html">Contact me</a>
           </li>
           <div class="someIcons d-flex align-items-center justify-content-center mt-3 mt-lg-0">
             <a href="https://www.behance.net/gdesignbg" class="m-2">
@@ -152,7 +152,7 @@
       </div>
       <!-- end of testimonialsSection -->
       <div class="contact-section text-center d-lg-flex justify-content-lg-center">
-        <form class="contact-section__form w-lg-50" method="POST" action="https://formspree.io/genadidesign@gmail.com">
+        <form class="contact-section__form w-lg-50 mb-0" method="POST" action="https://formspree.io/genadidesign@gmail.com">
           <h2>Write to me</h2>
           <input type="hidden" name="_subject" value="E-mail from portfolio" />
           <input type="hidden" name="_next" value="https://gdimitrovd.com/portfolio/filledForm.html" />
