Added some margins and paddings, changed parts from layout on some pages

--- a/contact.html
+++ b/contact.html
@@ -74,10 +74,10 @@
           <!-- end of form -->
         </div>
         <!-- end of contact-section -->
-        <div class="contact-section text-center mt-lg-5">
+        <div class="contact-section text-center pt-lg-5">
           <h2>Contact information</h2>
           <div class="contact-section__text justify-content-between">
-            <div class="py-4 pb-lg-0">
+            <div class="pt-3">
               <div class="contact-section__text--smaller mb-4">
                 <a href="">+359 895 794 733</a>
               </div>
