--- a/index.html
+++ b/index.html
@@ -74,26 +74,26 @@
       <!-- end of home-section -->
       <div class="projects-section text-lg-center">
         <div class="projects-section--slick mb-3 mb-lg-5">
-          <div class="projects-section__item projects-section__item1 position-relative">
+          <a href="https://mashmoclothing.netlify.com/" target="_blank" class="projects-section__item projects-section__item1 position-relative">
             <div class="projects-section__item--text text-left">
               <h4>Mashmo Clothing</h4>
               <p>UX &amp; UI</p>
             </div>
-          </div>
+          </a>
           <!-- end of projects-section__item -->
-          <div class="projects-section__item projects-section__item2 position-relative">
+          <a href="https://kozmetikvasilena.com/" target="_blank" class="projects-section__item projects-section__item2 position-relative">
             <div class="projects-section__item--text text-left">
               <h4>Vasilena Yancheva</h4>
               <p>User Interface</p>
             </div>
-          </div>
+          </a>
           <!-- end of projects-section__item -->
-          <div class="projects-section__item projects-section__item3 position-relative">
+          <a href="index.html" target="_blank" class="projects-section__item projects-section__item3 position-relative">
             <div class="projects-section__item--text text-left">
               <h4>Personal Portfolio</h4>
               <p>User Interface</p>
             </div>
-          </div>
+          </a>
           <!-- end of projects-section__item -->
         </div>
         <!-- end of projects-section-slick -->
