--- a/skills.html
+++ b/skills.html
@@ -58,7 +58,7 @@
   <main>
     <div id="skillspage">
       <h2 class="">My skills.</h2>
-      <div class="d-lg-flex justify-content-lg-between">
+      <div class="d-lg-flex justify-content-lg-between px-xl-5">
         <div class="skillspage__section secton1 mt-5 mt-lg-0 py-4 py-lg-5">
           <div class="skillspage-section__heading">
             <h3>User interface</h3>
