Some small details fixed.

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <link href="./styles/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body id="contactMe">
   <header>
     <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 d-lg-flex justify-content-lg-between">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
@@ -74,7 +74,7 @@
           <!-- end of form -->
         </div>
         <!-- end of contact-section -->
-        <div class="contact-section text-center pt-lg-5">
+        <div class="contact-section text-center py-lg-5">
           <h2>Contact information</h2>
           <div class="contact-section__text justify-content-between">
             <div class="pt-3">
