--- a/skills.html
+++ b/skills.html
@@ -65,8 +65,10 @@
           </div>
           <!-- end of skillspage-section__heading -->
           <div class="skillspage-section__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-              dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod
+              similique dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias
+              facere!
+            </p>
           </div>
           <!-- end of skillspage-section__content -->
         </div>
@@ -77,8 +79,10 @@
           </div>
           <!-- end of skillspage-section__heading -->
           <div class="skillspage-section__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-              dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod
+              similique dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias
+              facere!
+            </p>
           </div>
           <!-- end of skillspage-section__content -->
         </div>
@@ -89,9 +93,11 @@
           </div>
           <!-- end of skillspage-section__heading -->
           <div class="skillspage-section__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-              dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
-            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod
+              similique dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias
+              facere!
+            </p>
+          </div>
           <!-- end of skillspage-section__content -->
         </div>
         <!-- end of skillspage__section -->
@@ -135,51 +141,71 @@
           <img id="skillspage__gallery--modal-content" class="px-4">
         </div>
         <div class="gallery-img">
-          <img class="img-fluid" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533804032/genadi/skillspage/work.jpg">
+          <img srcset="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533804032/genadi/skillspage/work.jpg 500w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_992/v1533804032/genadi/skillspage/work.jpg 992w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533804032/genadi/skillspage/work.jpg 1500w"
+            sizes="(max-width: 500px) 500px,
+            (max-width: 992px) 992px,
+            1500px" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533804032/genadi/skillspage/work.jpg">
         </div>
         <div class="gallery-img">
-          <img class="img-fluid" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799764/genadi/skillspage/logoGenadi.jpg">
+          <img srcset="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533799764/genadi/skillspage/logoGenadi.jpg 500w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_992/v1533799764/genadi/skillspage/logoGenadi.jpg 992w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533799764/genadi/skillspage/logoGenadi.jpg 1500w"
+            sizes="(max-width: 500px) 500px,
+            (max-width: 992px) 992px,
+            1500px" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1533799764/genadi/skillspage/logoGenadi.jpg">
         </div>
         <div class="gallery-img">
-          <img class="img-fluid" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1534416642/genadi/skillspage/technical.jpg">
+          <img srcset="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1534416642/genadi/skillspage/technical.jpg 500w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_992/v1534416642/genadi/skillspage/technical.jpg 992w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1534416642/genadi/skillspage/technical.jpg 1500w"
+            sizes="(max-width: 500px) 500px,
+            (max-width: 992px) 992px,
+            1500px" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1534416642/genadi/skillspage/technical.jpg">
         </div>
         <div class="gallery-img">
-          <img class="img-fluid" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1534416471/genadi/skillspage/homeDesk.jpg">
+          <img srcset="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1534416471/genadi/skillspage/homeDesk.jpg 500w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_992/v1534416471/genadi/skillspage/homeDesk.jpg 992w,
+            https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1534416471/genadi/skillspage/homeDesk.jpg 1500w"
+            sizes="(max-width: 500px) 500px,
+            (max-width: 992px) 992px,
+            1500px" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_1500/v1534416471/genadi/skillspage/homeDesk.jpg">
         </div>
       </div>
     </div>
     <!-- end of skillspage -->
   </main>
   <footer class="footer text-center">
-      <div class="footer__part1 d-lg-flex justify-content-lg-between py-lg-5">
-        <div class="footer__logo row justify-content-center pt-4 pt-lg-0 pb-5 pb-lg-0">
-          <a class="logo" href="index.html">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
-          </a>
-        </div>
-        <!-- end of footer__logo -->
-        <div class="footer__text text-center row justify-content-center ml-lg-5">
-          <p class="mb-lg-0">If you like
-            <a href="projects.html">My work</a>, you can
-            <a href="contact.html">Contact me</a> and start working together.</p>
-        </div>
-        <!-- end of footer__text -->
-        <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
-          <a href="https://www.behance.net/gdesignbg" class="m-2">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
-          </a>
-          <a href="https://www.instagram.com/gdesignbg/" class="m-2">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
-          </a>
-        </div>
-        <!-- end of someIcons -->
+    <div class="footer__part1 d-lg-flex justify-content-lg-between py-lg-5">
+      <div class="footer__logo row justify-content-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+        <a class="logo" href="index.html">
+          <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
+        </a>
       </div>
-      <div class="footer__copyright row justify-content-center text-center py-4">
-        <p>Design by Genadi Georgiev
-          <br> Copyright 2018</p>
+      <!-- end of footer__logo -->
+      <div class="footer__text text-center row justify-content-center ml-lg-5">
+        <p class="mb-lg-0">If you like
+          <a href="projects.html">My work</a>, you can
+          <a href="contact.html">Contact me</a> and start working together.</p>
       </div>
-      <!-- end of footer__copyright -->
-    </footer>
+      <!-- end of footer__text -->
+      <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
+        <a href="https://www.behance.net/gdesignbg" class="m-2">
+          <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
+        </a>
+        <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+          <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
+        </a>
+      </div>
+      <!-- end of someIcons -->
+    </div>
+    <div class="footer__copyright row justify-content-center text-center py-4">
+      <p>Design by Genadi Georgiev
+        <br> Copyright 2018</p>
+    </div>
+    <!-- end of footer__copyright -->
+  </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
