--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <input type="hidden" name="_subject" value="E-mail from portfolio" />
           <input type="hidden" name="_next" value="https://gdimitrovd.com/portfolio/filledForm.html" />
           <input type="hidden" name="_language" value="en" />
-          <input type="text" name="Name" required placeholder="Your full name">
+          <input type="text" name="Name" required placeholder="Your name">
           <input type="email" name="E-mail" required placeholder="Your e-mail">
           <input type="text" name="Subject" required placeholder="Subject">
           <textarea type="text" rows="6" name="Message" required placeholder="Message"></textarea>
