Added text, animations, hovers.

--- a/skills.html
+++ b/skills.html
@@ -9,6 +9,7 @@
   <link href="./styles/fonts/fonts.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_13/v1532941359/genadi/homePage/icons/logo.png"/>
   <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
   <link href="./styles/styles.css" rel="stylesheet">
@@ -34,7 +35,7 @@
           <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
             <a class="nav-link p-0" href="about.html">About me</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4 disabled">
             <a class="nav-link p-0" href="skills.html">My skills</a>
           </li>
           <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
@@ -47,7 +48,7 @@
             <a href="https://www.behance.net/gdesignbg" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
             </a>
-            <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+            <a href="https://www.instagram.com/genadikr/" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
             </a>
           </div>
@@ -61,13 +62,11 @@
       <div class="d-lg-flex justify-content-lg-between px-xl-5">
         <div class="skillspage__section secton1 mt-5 mt-lg-0 py-4 py-lg-5">
           <div class="skillspage-section__heading">
-            <h3>User interface</h3>
+            <h3>User Experience</h3>
           </div>
           <!-- end of skillspage-section__heading -->
           <div class="skillspage-section__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod
-              similique dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias
-              facere!
+            <p> UX is a crucial part of all my projects - ensuring a natural flow that everyone can use and enjoy. After the research phase where it is possible to analyze the problems of the user, the designer must be able to formulate concrete solutions to real needs.
             </p>
           </div>
           <!-- end of skillspage-section__content -->
@@ -75,21 +74,18 @@
         <!-- end of skillspage__section -->
         <div class="skillspage__section section2 py-5">
           <div class="skillspage-section__heading">
-            <h3>User Experience</h3>
+            <h3>User Interface</h3>
           </div>
           <!-- end of skillspage-section__heading -->
           <div class="skillspage-section__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod
-              similique dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias
-              facere!
-            </p>
+            <p>After creating a great User Experience, the next important part is User Interface. For mobile app design, I am able to combine the ease of usage with clean and convenient interface. I am skilled at working with choosing the most appropriate fonts and colors depending on the design theme I am creating.</p>
           </div>
           <!-- end of skillspage-section__content -->
         </div>
         <!-- end of skillspage__section -->
         <div class="skillspage__section section3 py-5">
           <div class="skillspage-section__heading">
-            <h3>What about Logo Design?</h3>
+            <h3>Logo & 3D Design </h3>
           </div>
           <!-- end of skillspage-section__heading -->
           <div class="skillspage-section__content">
@@ -106,15 +102,17 @@
         <div class="skillspage__icons1">
           <h3>Tools I use</h3>
           <div class="icons-container mb-5 mt-3">
+            <img class="mx-2" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_100/v1536150905/genadi/skillspage/sketch.png">
             <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799753/genadi/skillspage/xd_logo.png">
             <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799752/genadi/skillspage/invision_logo.png">
             <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799752/genadi/skillspage/figma_logo.png">
+            <img class="mx-2" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_100/v1536150905/genadi/skillspage/photoshop.jpg">
           </div>
           <!-- end of icons-container -->
         </div>
         <!-- end of skillspage__icons1 -->
         <div class="skillspage__icons2">
-          <h3>Not to forget too</h3>
+          <h3>More tools</h3>
           <div class="icons-container mb-5 mt-3">
             <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799753/genadi/skillspage/ae_logo.png">
             <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799752/genadi/skillspage/pr_logo.png">
@@ -194,7 +192,7 @@
         <a href="https://www.behance.net/gdesignbg" class="m-2">
           <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
         </a>
-        <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+        <a href="https://www.instagram.com/genadikr/" class="m-2">
           <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
         </a>
       </div>
@@ -202,7 +200,7 @@
     </div>
     <div class="footer__copyright row justify-content-center text-center py-4">
       <p>Design by Genadi Georgiev
-        <br> Copyright 2018</p>
+        <br>&copy; Copyright 2018</p>
     </div>
     <!-- end of footer__copyright -->
   </footer>
