--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <link href="./styles/fonts/fonts.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
+  <link rel="shortcut icon" type="image/png" href="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_13/v1532941359/genadi/homePage/icons/logo.png"/>
   <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
   <link href="./styles/styles.css" rel="stylesheet">
@@ -31,7 +32,7 @@
           <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
             <a class="nav-link p-0" href="index.html">Home</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4 disabled">
             <a class="nav-link p-0" href="about.html">About me</a>
           </li>
           <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
@@ -47,7 +48,7 @@
             <a href="https://www.behance.net/gdesignbg" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
             </a>
-            <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+            <a href="https://www.instagram.com/genadikr/" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
             </a>
           </div>
@@ -77,17 +78,16 @@
           </div>
           <div class="aboutpage__text py-5 py-lg-0 d-lg-flex align-items-lg-center">
             <div>
-              <h3>Who is Genadi Georgiev?</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam
-                animi cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
+              <h3>Profile</h3>
+              <p>	My name is Genadi and I’m 22 years old. I am a designer specialized in UX/UI, currently living in Varna, Bulgaria, where I was born. I have been working as a freelancer for about 1 year, so I have several completed web projects for eCommerce, start-up business sites and portfolio sites. I have basic knowledge in HTML and CSS. From the very beginning I am creating interfaces for mobile applications.</p>
             </div>
           </div>
           <!-- end of aboutpage__text -->
         </div>
         <div class="aboutpage__text mt-lg-5 ml-lg-5">
-          <h3>My education.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-            dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
+          <h3>Education</h3>
+          <p>I have graduated the Creative program at <a href="https://creative.softuni.bg/">Software University, Sofia</a>, in which I have gone through courses focused on all areas of design (Graphic, Web, Motion & Video and 3D). Currently I am doing a Bachelor's degree in <a href="https://fs.tu-varna.bg/">Technical University of Varna</a> with specialty "Computer Systems and Technologies".
+            </p>
         </div>
         <!-- end of aboutpage__text -->
       </div>
@@ -121,6 +121,9 @@
           <a href="https://creative.softuni.bg/certificates/details/1277/16b13971" target="_blank" class="aboutpage__certificate">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/graphicDesignIllustrator.png">
           </a>
+          <a href="https://creative.softuni.bg/certificates/details/2238/705c4b85" target="_blank" class="aboutpage__certificate">
+            <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1536148912/genadi/aboutPage/certificates/visualization.png">
+          </a>
           <!-- end of aboutpage__certificate -->
         </div>
         <!-- end of projects-section-slick -->
@@ -129,16 +132,11 @@
       <div class="aboutpage__section3 pb-5 pb-lg-0">
         <div class="aboutpage__text ml-lg-5">
           <h3>What more..</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-            dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
-        </div>
-        <div class="aboutpage__text mb-3 mt-3 ml-lg-5">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-            dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
+          <p>I am striving to keep track of the new design trends. In my free time I looking at some inspiration websites. I sometimes make redesign of sites I do not like the way they are made to improve my skills. I love to read and travel. My favourite sport is swimming.</p>
         </div>
         <a class="arrow-link" href="skills.html">View my skills &rarr;</a>
         <blockquote class="aboutpage__blockquote black mt-5 px-4 py-2">
-          Now you can go to see
+          You probably want to see
           <br>
           <a class="arrow-link" href="projects.html">My work &rarr;</a>
         </blockquote>
@@ -166,7 +164,7 @@
         <a href="https://www.behance.net/gdesignbg" class="m-2">
           <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
         </a>
-        <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+        <a href="https://www.instagram.com/genadikr/" class="m-2">
           <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
         </a>
       </div>
@@ -174,7 +172,7 @@
     </div>
     <div class="footer__copyright row justify-content-center text-center py-4">
       <p>Design by Genadi Georgiev
-        <br> Copyright 2018</p>
+        <br> &copy; Copyright 2018</p>
     </div>
     <!-- end of footer__copyright -->
   </footer>
