--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
   <link href="./styles/fonts/fonts.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_13/v1532941359/genadi/homePage/icons/logo.png"/>
   <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
   <link href="./styles/styles.css" rel="stylesheet">
@@ -37,7 +38,7 @@
           <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
             <a class="nav-link p-0" href="skills.html">My skills</a>
           </li>
-          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
+          <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4 disabled">
             <a class="nav-link p-0" href="projects.html">My work</a>
           </li>
           <li class="nav-item d-lg-flex align-items-lg-center mr-lg-4">
@@ -47,7 +48,7 @@
             <a href="https://www.behance.net/gdesignbg" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
             </a>
-            <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+            <a href="https://www.instagram.com/genadikr/" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
             </a>
           </div>
@@ -118,7 +119,7 @@
           <a href="https://www.behance.net/gdesignbg" class="m-2">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
           </a>
-          <a href="https://www.instagram.com/gdesignbg/" class="m-2">
+          <a href="https://www.instagram.com/genadikr/" class="m-2">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
           </a>
         </div>
@@ -126,7 +127,7 @@
       </div>
       <div class="footer__copyright row justify-content-center text-center py-4">
         <p>Design by Genadi Georgiev
-          <br> Copyright 2018</p>
+          <br> &copy; Copyright 2018</p>
       </div>
       <!-- end of footer__copyright -->
     </footer>
