Added text to logo and 3d design.  Making some links to open on new tab.

--- a/projects.html
+++ b/projects.html
@@ -45,10 +45,10 @@
             <a class="nav-link p-0" href="contact.html">Contact me</a>
           </li>
           <div class="someIcons d-flex align-items-center justify-content-center mt-3 mt-lg-0">
-            <a href="https://www.behance.net/gdesignbg" class="m-2">
+            <a href="https://www.behance.net/gdesignbg" target="_blank" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
             </a>
-            <a href="https://www.instagram.com/genadikr/" class="m-2">
+            <a href="https://www.instagram.com/genadikr/" target="_blank" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
             </a>
           </div>
@@ -116,10 +116,10 @@
         </div>
         <!-- end of footer__text -->
         <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
-          <a href="https://www.behance.net/gdesignbg" class="m-2">
+          <a href="https://www.behance.net/gdesignbg" target="_blank" class="m-2">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
           </a>
-          <a href="https://www.instagram.com/genadikr/" class="m-2">
+          <a href="https://www.instagram.com/genadikr/" target="_blank" class="m-2">
             <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
           </a>
         </div>
