--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
   <link href="./styles/fonts/fonts.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
-    <link rel="shortcut icon" type="image/png" href="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_13/v1532941359/genadi/homePage/icons/logo.png"/>
+  <link rel="shortcut icon" type="image/png" href="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_13/v1532941359/genadi/homePage/icons/logo.png" />
   <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
   <link href="./styles/styles.css" rel="stylesheet">
@@ -45,10 +45,10 @@
             <a class="nav-link p-0" href="contact.html">Contact me</a>
           </li>
           <div class="someIcons d-flex align-items-center justify-content-center mt-3 mt-lg-0">
-            <a href="https://www.behance.net/gdesignbg" class="m-2">
+            <a href="https://www.behance.net/gdesignbg" target="_blank" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
             </a>
-            <a href="https://www.instagram.com/genadikr/" class="m-2">
+            <a href="https://www.instagram.com/genadikr/" target="_blank" class="m-2">
               <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
             </a>
           </div>
@@ -66,7 +66,9 @@
           </div>
           <!-- end of skillspage-section__heading -->
           <div class="skillspage-section__content">
-            <p> UX is a crucial part of all my projects - ensuring a natural flow that everyone can use and enjoy. After the research phase where it is possible to analyze the problems of the user, the designer must be able to formulate concrete solutions to real needs.
+            <p> UX is a crucial part of all my projects - ensuring a natural flow that everyone can use and enjoy.
+              After the research phase where it is possible to analyze the problems of the user, the designer must be
+              able to formulate concrete solutions to real needs.
             </p>
           </div>
           <!-- end of skillspage-section__content -->
@@ -78,7 +80,9 @@
           </div>
           <!-- end of skillspage-section__heading -->
           <div class="skillspage-section__content">
-            <p>After creating a great User Experience, the next important part is User Interface. For mobile app design, I am able to combine the ease of usage with clean and convenient interface. I am skilled at working with choosing the most appropriate fonts and colors depending on the design theme I am creating.</p>
+            <p>After creating a great User Experience, the next important part is User Interface. For mobile app
+              design, I am able to combine the ease of usage with clean and convenient interface. I am skilled at
+              working with choosing the most appropriate fonts and colors depending on the design theme I am creating.</p>
           </div>
           <!-- end of skillspage-section__content -->
         </div>
@@ -89,9 +93,9 @@
           </div>
           <!-- end of skillspage-section__heading -->
           <div class="skillspage-section__content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod
-              similique dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias
-              facere!
+            <p>I am striving for an easier recognition of the logo. As a final result, I want to achieve a stylish and
+              modern vision. Regarding 3D, I would like to become more experienced in this field. I have worked with Autodesk
+              (3Ds Max and Maya) while doing the assignments from Software University.
             </p>
           </div>
           <!-- end of skillspage-section__content -->
@@ -189,10 +193,10 @@
       </div>
       <!-- end of footer__text -->
       <div class="someIcons row justify-content-center align-items-center pt-4 pt-lg-0 pb-5 pb-lg-0">
-        <a href="https://www.behance.net/gdesignbg" class="m-2">
+        <a href="https://www.behance.net/gdesignbg" target="_blank" class="m-2">
           <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
         </a>
-        <a href="https://www.instagram.com/genadikr/" class="m-2">
+        <a href="https://www.instagram.com/genadikr/" target="_blank" class="m-2">
           <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
         </a>
       </div>
